# sorted-expressions-ala-carte

./: sorted-expressions-ala-carte.cabal
src/: Expression.hs
src/Expression/: Arithmetic.hs  Array.hs  Equality.hs  Parser.hs  Sort.hs
src/Expression/Sort/: Dynamic.hs
src/Utils/: Indexed.hs
src/Utils/Indexed/: Fixpoint.hs  Functor.hs  Show.hs  Sum.hs
