name:                sorted-expressions-ala-carte
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Jakub Daniel
maintainer:          daniel@d3s.mff.cuni.cz
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Expression,
                       Expression.Arithmetic,
                       Expression.Array,
                       Expression.Equality,
                       Expression.Parser,
                       Expression.Sort,
                       Expression.Sort.Dynamic,
                       Utils.Indexed,
                       Utils.Indexed.Fixpoint,
                       Utils.Indexed.Functor,
                       Utils.Indexed.Sum,
                       Utils.Indexed.Show
  other-extensions:    AllowAmbiguousTypes,
                       DataKinds,
                       DeriveDataTypeable,
                       FlexibleContexts,
                       FlexibleInstances,
                       GADTs,
                       MultiParamTypeClasses,
                       OverloadedStrings,
                       RankNTypes,
                       ScopedTypeVariables,
                       StandaloneDeriving,
                       TypeInType,
                       TypeOperators,
                       UndecidableInstances
  build-depends:       base >=4.9 && <4.10,
                       attoparsec >=0.13 && <0.14,
                       text >=1.2 && <1.3
  hs-source-dirs:      src
  default-language:    Haskell2010
